integration tests ready
